--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
-    "firebase": "^11.9.1",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.1.1",
     "genkit": "^1.14.1",
     "googleapis": "^140.0.1",
     "lucide-react": "^0.475.0",
