--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "genkit-cli": "^1.14.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "turbo": "^2.5.5",
     "typescript": "^5"
   }
 }
